test_data/neg/ss/655286/Windows/655286.acc_simp.rtf
>655286
MKLLTHVCHYCSFSFFTRKFDVFGAITKKDTPVVFCPTCGNQSLSVSHIEEEIR
EEEEEEMBEMBMBMBBMMEMEBBEBBMEEEMMBBBBEEMEEEEEEEEEEEEEEE
